# stm32-rust-template

fw/: .gdbinit  Cargo.toml  memory.x
fw/src/: main.rs
stm32f417/: Cargo.toml
