[package]
authors = ["Robert Ou <rqou@berkeley.edu"]
categories = ["embedded", "no-std"]
description = "STM32 template"
keywords = ["arm", "cortex-m"]
license = "0BSD"
name = "stm32-template"
version = "0.0.1"

[dependencies]
cortex-m = "0.4.3"
cortex-m-rt = "0.3.13"
cortex-m-rtfm = "0.3.1"
cortex-m-semihosting = "0.2.0"
alloc-cortex-m = "0.3.2"

[dependencies.cast]
version = "0.2.2"
default-features = false

[dependencies.stm32f417]
features = ["rt"]
path = "../stm32f417"

# disable both incremental compilation and parallel codegen to reduce the chances of running into
# rust-lang/rust#47074
[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
debug = true
lto = true
